# rigol-dsa815-python

./: .gitignore  LICENSE  README.md  Rigol_DSA815.py  Rigol_GUI.py  Rigol_TK_viewer.py  pyproject.toml  requirements.txt
docs/: COMMAND_COVERAGE.md
docs/vendor_manuals/: README.md
examples/: basic_connection.py  launch_gui.py
src/: DSA815.py
